added front end functionality to decrease temperature, reset thermostat and toggle PowerSaving mode

--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
 			<span class='temperature'>20</span>°C
 		</h2>
 		<button class='increaseTemp'>▲</button>
-		<button>▼</button>
+		<button class='decreaseTemp'>▼</button>
+		<button class='reset'>reset</button>
+		<br />
+		<input type='checkbox' id='psm' checked>
+		<label for='psm'>PowerSaving Mode</label>
 
 		<script src='src/Thermostat.js'></script>
 		<script src='http://code.jquery.com/jquery-2.1.1.min.js'></script>
@@ -40,7 +44,21 @@
 					thermostat.increaseTemperature();
 					updateTemperature(thermostat)
 				})
-				
+
+				$('.decreaseTemp').on('click', function(){
+					thermostat.decreaseTemperature();
+					updateTemperature(thermostat)
+				})
+
+				$('.reset').on('click', function(){
+					thermostat.reset();
+					updateTemperature(thermostat)
+				})
+
+				$('#psm').on('change', function(){
+					thermostat.powerSavingMode = $(this).prop('checked');
+				})
+
 			})
 		</script>
 
