--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
 			font-size: 30px;
 			font-family: 'Helvetica Neue';
 		}
+
+		.efficient{
+			color: green;
+		}
+
+		.average{
+			color: orange;
+		}
+
+		.inefficient{
+			color: red;
+		}
+
 	</style>
 	
 	</head>
@@ -33,6 +46,7 @@
 		<script>
 			function updateTemperature(thermostat){
 				$('.temperature').text(thermostat.temperature);
+				$('h2').attr('class', '').addClass(thermostat.energyUsage());
 			}
 			$(document).ready(function(){
 				var thermostat = new Thermostat();
