added that thermostat makes POST request with new temperature after every temperature change

--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
 			function updateTemperature(thermostat){
 				$('.temperature').text(thermostat.temperature);
 				$('h2').attr('class', '').addClass(thermostat.energyUsage());
+			
+				$.post('http://localhost:4567/temperature_change', {newTemperature: thermostat.temperature})
 			}
 			$(document).ready(function(){
 				var thermostat = new Thermostat();
@@ -67,6 +69,10 @@
 				$('.reset').on('click', function(){
 					thermostat.reset();
 					updateTemperature(thermostat)
+				})
+
+				$('button').on('click', function(){
+						updateTemperature(thermostat);
 				})
 
 				$('#psm').on('change', function(){
